<package>
  <name>jsk_pcl_ros</name>
  <version>0.1.20</version>
  <description>jsk_pcl_ros</description>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Youhei Kakiuchi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_pcl_ros</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>pcl</build_depend> -->
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_view2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>rosboost_cfg</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ml_classifiers</build_depend>
  <build_depend>sklearn</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <build_depend>roscpp_tutorials</build_depend>
  <run_depend>roscpp_tutorials</run_depend>
  <run_depend>jsk_topic_tools</run_depend>

  <!-- <run_depend>pcl</run_depend> -->
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_view2</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>rosboost_cfg</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>ml_classifiers</run_depend>
  <run_depend>sklearn</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/jsk_pcl_nodelets.xml"/>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ljsk_pcl_ros" cflags="-I${prefix}/include"/>
  </export>
</package>
