<package>
  <name>jsk_pcl_ros</name>
  <version>1.2.5</version>
  <description>ROS nodelets for pointcloud perception.</description>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Youhei Kakiuchi</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="wada@imi.jsk.i.u-tokyo.ac.jp">Kentaro Wada</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/jsk-ros-pkg/jsk_recognition</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_recognition/issues</url>
  <url type="website">http://jsk-docs.readthedocs.io/en/latest/jsk_recognition/doc/jsk_pcl_ros</url>

  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <run_depend>pcl</run_depend> -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>jsk_pcl_ros_utils</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <build_depend version_gte="2.2.7">jsk_topic_tools</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_view2</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>jsk_data</run_depend>
  <run_depend>jsk_footstep_msgs</run_depend>
  <run_depend>jsk_pcl_ros_utils</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>jsk_recognition_utils</run_depend>
  <run_depend version_gte="2.2.7">jsk_topic_tools</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>ml_classifiers</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>resized_image_transport</run_depend>
  <run_depend>robot_self_filter</run_depend>
  <run_depend>rosboost_cfg</run_depend>
  <run_depend>roscpp_tutorials</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>

  <test_depend>jsk_tools</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libjsk_pcl_ros.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libjsk_pcl_ros_utils.xml"/>
    <moveit_ros_perception plugin="${prefix}/plugins/moveit_ros_perception/libjsk_pcl_ros_moveit.xml"/>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ljsk_pcl_ros" cflags="-I${prefix}/include"/>
  </export>
</package>
