<package format="3">
  <name>jsk_pcl_ros</name>
  <version>1.2.15</version>
  <description>ROS nodelets for pointcloud perception.</description>
  <maintainer email="youhei@jsk.t.u-tokyo.ac.jp">Youhei Kakiuchi</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="wada@imi.jsk.i.u-tokyo.ac.jp">Kentaro Wada</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/jsk-ros-pkg/jsk_recognition</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_recognition/issues</url>
  <url type="website">https://jsk-docs.readthedocs.io/projects/jsk_recognition/en/latest/jsk_pcl_ros</url>

  <author email="youhei@jsk.t.u-tokyo.ac.jp">Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <exec_depend>pcl</exec_depend> -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>jsk_data</build_depend>
  <build_depend>jsk_pcl_ros_utils</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <!-- <build_depend>jsk_rviz_plugins</build_depend> --> <!-- jsk_recognition should not depends on jsk_visualization -->
  <build_depend version_gte="2.2.7">jsk_topic_tools</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>checkerboard_detector</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_view2</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>jsk_footstep_msgs</exec_depend>
  <exec_depend>jsk_interactive_marker</exec_depend>
  <exec_depend>jsk_pcl_ros_utils</exec_depend>
  <!-- <exec_depend>jsk_rviz_plugins</exec_depend> --> <!-- jsk_recognition should not depends on jsk_visualization -->
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>jsk_recognition_utils</exec_depend>
  <exec_depend version_gte="2.2.7">jsk_topic_tools</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>laser_assembler</exec_depend>
  <exec_depend>ml_classifiers</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>openni_launch</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-sklearn</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-sklearn</exec_depend>
  <exec_depend>resized_image_transport</exec_depend>
  <exec_depend>robot_self_filter</exec_depend>
  <exec_depend>rosboost_cfg</exec_depend>
  <exec_depend>roscpp_tutorials</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <test_depend>jsk_perception</test_depend>
  <test_depend>jsk_tools</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libjsk_pcl_ros.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libjsk_pcl_ros_utils.xml"/>
    <moveit_ros_perception plugin="${prefix}/plugins/moveit_ros_perception/libjsk_pcl_ros_moveit.xml"/>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ljsk_pcl_ros" cflags="-I${prefix}/include"/>
  </export>
</package>
